# tauri-plugin-localhost

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.changes/: asset-resolver-use-path-part.md  config.json  initial-release.md  readme.md
.github/workflows/: covector-version-or-publish.yml
examples/vanilla/public/: index.html  init.js
examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
examples/vanilla/src-tauri/src/: main.rs
src/: lib.rs
