[package]
name = "tauri-plugin-localhost"
version = "0.0.0"
authors = [ "Tauri Programme within The Commons Conservancy" ]
description = ""
edition = "2021"
rust-version = "1.56"
exclude = ["/examples"]

[dependencies]
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "next" }
serde_json = "1.0"
tiny_http = "0.9"
