[package]
name = "tauri-plugin-localhost"
version = "0.1.0"
authors = [ "Tauri Programme within The Commons Conservancy" ]
description = "A Tauri Plugin that allows usage of a localhost server instead of the custom protocol in production builds"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/tauri-apps/tauri-plugin-localhost"
edition = "2021"
rust-version = "1.56"
exclude = [ "/examples" ]

[dependencies]
tauri = "1.1"
serde_json = "1.0"
tiny_http = "0.11"
