[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "Tauri Programme within The Commons Conservancy" ]
repository = ""
edition = "2021"
rust-version = "1.56"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0", features = [ "api-all" ] }
tauri-plugin-localhost = { path = "../../../" }
portpicker = "0.1"

[build-dependencies]
tauri-build = { version = "1.0" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
